--- a/resume/index.html
+++ b/resume/index.html
@@ -64,29 +64,29 @@
               
 
 
-<p>AMANDA HASSELL
-<a href="mailto:amanda.hassell@utexas.edu" class="email">amanda.hassell@utexas.edu</a></p>
-<p>COLLEGE EDUCATION
-University of Texas/College of Natural Sciences, BS expected Spring 2021
-Major: B.S. Human Biology (Pre-Dental)
+<p>AMANDA HASSELL</p>
+<p><a href="mailto:amanda.hassell@utexas.edu" class="email">amanda.hassell@utexas.edu</a></p>
+<p>COLLEGE EDUCATION</p>
+<p>University of Texas/College of Natural Sciences, BS expected Spring 2021</p>
+<p>Major: B.S. Human Biology (Pre-Dental)
 GPA: 3.988
 DAT Score: 23 AA</p>
-<p>Awards:
-College of Natural Sciences Scholar, Spring 2020 &amp; Spring 2021
+<p>Awards:</p>
+<p>College of Natural Sciences Scholar, Spring 2020 &amp; Spring 2021
 College of Natural Sciences Second Year Excellence Award, Spring 2019</p>
-<p>Extracurricular Activities &amp; Campus Involvement:<br />
-Texas Pre-Dental Society Distinguished Member, Spring 2019 – present
-- Served on the Philanthropy Committee, Spring 2019
-Peer Led Undergraduate Studying Facilitator for General Biochemistry at UT Austin, Fall 2019
-Global Medical Training Member, Fall 2017 – Fall 2019
-Chi Omega Sorority Member, Fall 2017 – present</p>
-<p>Community Service:
-Manos De Cristo Weekly Volunteer, Spring 2019 — present
-- Work in the sterilization room of Manos de Cristo, a low-cost dental clinic in Austin, TX<br />
-Global Medical Training Volunteer, Peru, June 2019
+<p>Extracurricular Activities &amp; Campus Involvement:</p>
+<p>Texas Pre-Dental Society Distinguished Member, Spring 2019 – present
+- Served on the Philanthropy Committee, Spring 2019</p>
+<p>Peer Led Undergraduate Studying Facilitator for General Biochemistry at UT Austin, Fall 2019</p>
+<p>Global Medical Training Member, Fall 2017 – Fall 2019</p>
+<p>Chi Omega Sorority Member, Fall 2017 – present</p>
+<p>Community Service:</p>
+<p>Manos De Cristo Weekly Volunteer, Spring 2019 — present
+- Work in the sterilization room of Manos de Cristo, a low-cost dental clinic in Austin, TX</p>
+<p>Global Medical Training Volunteer, Peru, June 2019
 - Assisted dentists in Peru for one week in providing free dental care to local communities and helped educate citizens about proper daily oral hygiene</p>
-<p>Employment:
-Undergraduate Teaching Assistant for Human Microscopic and Gross Anatomy at UT Austin, Spring 2020</p>
+<p>Employment:</p>
+<p>Undergraduate Teaching Assistant for Human Microscopic and Gross Anatomy at UT Austin, Spring 2020</p>
 
             
 
